refactor: adopt java 17 features