@@ -1,8 +1,11 @@
 package dev.noid.toolbox.opdf.pdfbox;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 
-import java.util.Arrays;
+import java.util.List;
 import org.apache.pdfbox.io.MemoryUsageSetting;
 import org.apache.pdfbox.multipdf.PDFMergerUtility;
 import org.junit.jupiter.api.BeforeEach;
@@ -25,7 +28,7 @@ class PdfBoxMergerTest {
     TestSource page2 = new TestSource("text-page-2.pdf");
     TestSink testSink = new TestSink();
 
-    merger.merge(Arrays.asList(page1, page2), testSink);
+    merger.merge(List.of(page1, page2), testSink);
 
     assertEquals(1, testSink.getWritingCalls());
     assertEquals(2, PdfBoxUtil.getPageCount(testSink.getBytesWritten(0)));
@@ -37,7 +40,7 @@ class PdfBoxMergerTest {
     TestSource page2 = new TestSource("text-page-2.pdf");
     TestSink testSink = new TestSink();
 
-    merger.merge(Arrays.asList(page1, page2), testSink);
+    merger.merge(List.of(page1, page2), testSink);
 
     assertEquals(1, testSink.getWritingCalls());
     assertEquals(2138, testSink.getBytesWritten(0).length);
@@ -49,7 +52,7 @@ class PdfBoxMergerTest {
     TestSource page2 = new TestSource("text-page-2.pdf");
     TestSink testSink = new TestSink();
 
-    merger.merge(Arrays.asList(page1, page2), testSink);
+    merger.merge(List.of(page1, page2), testSink);
 
     assertEquals(1, page1.getReadingCalls());
     assertEquals(1, page1.getCloseCalls());
@@ -60,5 +63,26 @@ class PdfBoxMergerTest {
     assertEquals(1, testSink.getWritingCalls());
     // closed explicitly by the merger and implicitly by PDF box
     assertEquals(2, testSink.getCloseCalls());
+  }
+
+  @Test
+  void merge_error_when_document_missing() {
+    List<TestSource> badSources = List.of(new TestSource("not-found.pdf"));
+    TestSink testSink = new TestSink();
+
+    Exception error = assertThrows(IllegalArgumentException.class, () -> merger.merge(badSources, testSink));
+    assertEquals("Cannot add source for merging", error.getMessage());
+    assertEquals("Test resource not found: not-found.pdf", error.getCause().getMessage());
+  }
+
+  @Test
+  void merge_error_when_sink_failed() {
+    List<TestSource> multiSource = List.of(new TestSource("text-page-1.pdf"), new TestSource("text-page-2.pdf"));
+    TestSink badSink = mock(TestSink.class);
+    doThrow(new RuntimeException("Test sink problem")).when(badSink).getWriting();
+
+    Exception error = assertThrows(IllegalArgumentException.class, () -> merger.merge(multiSource, badSink));
+    assertEquals("Cannot merge documents", error.getMessage());
+    assertEquals("Test sink problem", error.getCause().getMessage());
   }
 }
